syntax = "proto3";

package wallet;

option go_package = "api-wallet";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

message Account {
  string account_id = 1;
  string user_id = 2;
  string name = 3;
  common.AccountType type = 4;
  common.Money balance = 5;
  google.protobuf.Timestamp created_at = 6;
}

message Transaction {
  string account_id = 1;
  string user_id = 2;
  common.TransactionType type = 3;
  common.Money amount = 4;
  string category = 5;
  string from_account_id = 6;
  string to_account_id = 7;
  google.protobuf.Timestamp date = 8;
  string description = 9;
}

message GetAccountsRequest {
  string user_id = 1;
  repeated common.AccountBackend backends = 2;
}

message GetAccountsResponse {
  repeated Account accounts = 1;
}

message GetTransactionsRequest {
  string user_id = 1;
  repeated common.AccountBackend backends = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
}

message GetTransactionsResponse {
  repeated Transaction transactions = 1;
}

service WalletService {
  rpc GetAccounts(GetAccountsRequest) returns (GetAccountsResponse);
  rpc GetTransactions(GetTransactionsRequest) returns (GetTransactionsResponse);
}
